# aiorctest

./: .env.example  .gitignore  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: bootstrap.py  main.py
backend/app/api/: routes_admin.py  routes_api.py  routes_auth.py  routes_dag.py  routes_llm.py  routes_project.py  routes_rag.py
backend/app/core/: deps.py  security.py
backend/app/db/: engine.py  models.py
backend/app/rag/: config.py  ingest.py  pipeline.py  retriever.py  vectorstore.py
backend/app/schemas/: api_endpoint.py  auth.py  dag.py  llm.py  project.py  rag.py  scenario.py
backend/app/services/: ai_orchestration.py  curl_parser.py  openapi_parser.py
docs/: CHANGELOG.md  README.md  api-reference.md  architecture.md  deployment.md  developer-guide.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: Layout.tsx
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/lib/: lastProject.ts  roles.ts
frontend/src/pages/admin/: index.tsx
frontend/src/pages/apis/: Wrapper.tsx  index.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/providers/: authProvider.ts
frontend/src/types/: api.ts  auth.ts  dag.ts
scripts/: kill-port.sh  start-backend.sh  start-frontend.sh  start-website.sh
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: main.ts  style.css
(+7 files in other folders)
